# edtest

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-APACHE  README.md  SECURITY.md  bacon.toml
.agents/skills/rust-daily/: SKILL.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  coverage.yml  release.yml
crates/bptest/: Cargo.toml  README.md
crates/bptest/src/: lib.rs
crates/bptest/tests/: smoke.rs
crates/bptest_macros/: Cargo.toml
crates/edtest/: Cargo.toml  README.md
crates/edtest/src/: lib.rs
crates/edtest/tests/: smoke.rs  uses_macro.rs
crates/edtest_macros/: Cargo.toml  README.md
crates/edtest_macros/src/: lib.rs  macro_impl.rs
crates/edtest_tests/: Cargo.toml  README.md
crates/edtest_tests/src/: lib.rs  main.rs
crates/rsttl_macros/: Cargo.toml
crates/rsttl_macros/src/: macro_impl.rs
crates/testing/: Cargo.toml
crates/testing/proptest-regressions/: lib.txt
crates/testing/src/: lib.rs
examples/usage/: Cargo.toml
examples/usage/src/: lib.rs
examples/usage/tests/: async_serial.rs  basic.rs  fixtures.rs  insta_suffix.rs  logging.rs
examples/usage/tests/snapshots/: insta_suffix__insta_suffix_example.snap.new
