[package]
name = "bptest"
version = "0.1.0"
edition = "2021"

[dependencies]
bptest_macros = { path = "../bptest_macros" }

rstest = "0.24.0"
tokio = { version = "1.43.0", features = ["test-util", "macros"] }
test-log = { version = "0.2.17", features = ["trace"] }
static_assertions = "1.1.0"
serial_test = "3.2.0"

[dev-dependencies]
proptest = "1.6.0"
tracing = "0.1.41"
