[package]
name = "edtest"
version = "0.1.0"
description = "Streamlines the use of `rstest` with tracing and support for async tests with the `tokio` framework."
readme = "README.md"
edition = "2021"
authors = ["Johnny Tidemand Vestergaard <jtv@jrtv.dk>"]
keywords = ["testing", "rstest"]
categories = ["development-tools::testing"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/taurr/edtest"

[dependencies]
edtest_macros = { version = "0.1.0" }

rstest = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
serial_test = { workspace = true }
static_assertions = { workspace = true }

[dev-dependencies]
tracing = { workspace = true }

[patch.crates-io]
edtest_macros = { path = "../edtest_macros" }
