[package]
name = "edtest_macros"
version = "0.1.0"
description = "Procedural macros for the `edtest` crate."
readme = "README.md"
edition = "2021"
authors = ["Johnny Tidemand Vestergaard <jtv@jrtv.dk>"]
keywords = ["testing", "rstest"]
categories = ["development-tools::testing"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/taurr/edtest"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"]}
