[package]
name = "edtest_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[dev-dependencies]
proptest = { workspace = true }
tracing = { workspace = true }

edtest = { path = "../edtest" }
rstest = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
serial_test = { workspace = true }

