[package]
name = "edtest_tests"
version = "0.1.0"
description = "Tests for the `edtest` crate."
readme = "README.md"
edition = "2021"
authors = ["Johnny Tidemand Vestergaard <jtv@jrtv.dk>"]
keywords = ["testing", "rstest"]
categories = ["development-tools::testing"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/taurr/edtest"

[dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[dev-dependencies]
proptest = { workspace = true }
tracing = { workspace = true }

edtest = { path = "../edtest" }
rstest = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
serial_test = { workspace = true }
