[package]
name = "rsttl_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
#darling = "0.20.10"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = "2.0.98"

rstest = "0.24.0"
test-log = { version = "0.2.17", features = ["trace"], optional = true }
tokio = { version = "1.43.0", features = ["test-util", "macros"], optional = true }
async-std = { version = "1.13.0", features = ["attributes"], optional = true }

[features]
default = ["test-log", "tokio"]

test-log = ["dep:test-log"]
tokio = ["dep:tokio"]
async-std = ["dep:async-std"]
